gccida/c3/store_bit_field
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_bit_field/src/expmed.c:755:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode fieldmode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_bit_field/src/expmed.c:764:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_bit_field/src/expmed.c:773:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_bit_field/src/expmed.c:774:4: error: expected ';' after expression
rtx v22; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_bit_field/src/expmed.c:774:5: error: use of undeclared identifier 'v22'
rtx v22; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_bit_field/src/expmed.c:776:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_bit_field/src/expmed.c:777:4: error: expected ';' after expression
rtx v25; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_bit_field/src/expmed.c:777:5: error: use of undeclared identifier 'v25'
rtx v25; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_bit_field/src/expmed.c:785:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v33; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_bit_field/src/expmed.c:786:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v34; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_bit_field/src/expmed.c:787:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v35; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_bit_field/src/expmed.c:792:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v40; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_bit_field/src/expmed.c:793:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v41; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_bit_field/src/expmed.c:794:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v42; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_bit_field/src/expmed.c:799:4: error: expected ';' after expression
rtx v47; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_bit_field/src/expmed.c:799:5: error: use of undeclared identifier 'v47'
rtx v47; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_bit_field/src/expmed.c:800:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v48; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_bit_field/src/expmed.c:809:4: error: expected ';' after expression
rtx v57; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_bit_field/src/expmed.c:809:5: error: use of undeclared identifier 'v57'
rtx v57; // r13 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_bit_field/src/obj/expmed.o] Error 1
